--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
                                                         style="border-width: 0px;z-index: 999 ;position: relative ;">
-                                                        <img src="img/8-01.webp" width="1320" height="218"
+                                                        <img src="img/8-01.webp" width="1320" height="218" loading="lazy"
                                                             alt="raffles University" />
                                                     </div>
                                                 </div>
@@ -745,7 +745,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/course.webp" alt="course" style="width: 80%;" width="530"
+                                                <img src="img/course.webp" alt="course" style="width: 80%;" width="530" loading="lazy"
                                                     height="635" class="vision-img aos-init aos-animate width1 scale1"
                                                     data-aos="fade-right" data-aos-duration="800">
                                             </div>
@@ -1015,7 +1015,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.webp" style="width: 100%;" alt="map" width="1520" height="900">
+                        <img src="img/MAP-01.webp" style="width: 100%;" alt="map" width="1520" height="900" loading="lazy">
                     </div>
 
                 </div>
@@ -1154,7 +1154,7 @@
             apiKey: '241235032191332',
             accessToken: 'IGQWRQUFRIZAGtCVU5Uak9ZATGZAxdG01dVVoYVJjSkttZAnpWb3ZAzT21NNy1qWkIwdVdsNEJ2WFM0NVVYbXZAzM09XRjBPYk1IRFZAvbHZAxUVhnU1NVRGcxVm9CRzB5UFlMVWV4bU5vU0FqWWtFZAwZDZD',
             get: 'user',
-            template: '<li class= "gdlr-core-gallery-list gdlr-core-item-mglr"><div class="gdlr-core-media-image" ><a href="{{link}}" aria-label="instagram post"><img class="insta-image" style="height: 400px ;width:400px;" src="{{image}}" /></a></div></li>',
+            template: '<li class= "gdlr-core-gallery-list gdlr-core-item-mglr"><div class="gdlr-core-media-image" ><a href="{{link}}" aria-label="instagram post"><img class="insta-image" loading="lazy" alt="insta-image" width="400" height="400" style="height: 400px ;width:400px;" src="{{image}}" /></a></div></li>',
         });
 
         feed.run();
@@ -1172,25 +1172,25 @@
         AOS.init();
     </script>
 
-    <script type='text/javascript' src='js/logos-slider.js'></script>
-    <script type='text/javascript' src='js/jquery/jquery.js'></script>
-    <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
-    <script type='text/javascript' src='plugins/revslider/public/assets/js/jquery.themepunch.tools.min.js'></script>
-    <script type='text/javascript'
+    <script  type='text/javascript' src='js/logos-slider.js'></script>
+    <script  type='text/javascript' src='js/jquery/jquery.js'></script>
+    <script  type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
+    <script  type='text/javascript' src='plugins/revslider/public/assets/js/jquery.themepunch.tools.min.js'></script>
+    <script  type='text/javascript'
         src='plugins/revslider/public/assets/js/jquery.themepunch.revolution.min.js'></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.slideanims.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.layeranimation.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.kenburn.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.navigation.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.parallax.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.actions.min.js"></script>
-    <script type="text/javascript"
+    <script  type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.video.min.js"></script>
 
     <script type="text/javascript">
@@ -1295,7 +1295,7 @@
         } /*]]>*/
     </script>
 
-    <script type='text/javascript' src='plugins/goodlayers-core/plugins/combine/script.js'></script>
+    <script  type='text/javascript' src='plugins/goodlayers-core/plugins/combine/script.js'></script>
     <script type='text/javascript'>
         var gdlr_core_pbf = {
             "admin": "",
