--- a/index-ar.html
+++ b/index-ar.html
@@ -313,7 +313,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/2-01.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/2-01.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -347,7 +347,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/3-02.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/3-02.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -382,7 +382,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;"
+                                                style="background-image: url(img/4-03.webp) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -417,7 +417,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/5-04.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/5-04.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -451,7 +451,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;filter: contrast(0.8) ;"
+                                                style="background-image: url(img/4-03.webp) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;filter: contrast(0.8) ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -485,7 +485,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/7-06.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/7-06.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -619,7 +619,7 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
                                                         style="border-width: 0px;z-index: 999 ;position: relative ;">
-                                                        <img src="img/8-01.png" width="1320" height="218" alt="">
+                                                        <img src="img/8-01.webp" width="1320" height="218" alt="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -890,7 +890,7 @@
 
                     <div class="gdlr-core-pbf-wrapper " style="padding: 55px 0px 20px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image: url(img/B34A0299.jpg) ;background-size: cover;background-position-y: -315px;">
+                            style="background-image: url(img/B34A0299.webp) ;background-size: cover;background-position-y: -315px;">
                             <div class="overlay3"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
