--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
     <link rel='stylesheet' aria-label="css 5" href='css/kingster-style-custom.css' type='text/css' media='all' />
     <link rel='stylesheet' aria-label="css 6" href='css/logos-slider.css' type='text/css' media='all' />
     <link rel='stylesheet' aria-label="css 7" href='css/posts-slider.css' type='text/css' media='all' />
-    <link rel="preload" aria-label="font 1" href="fonts/ITCAvantGardeStd-Demi.woff2" as="font" type="font/woff2"
-        crossorigin>
-    <link rel="preload" aria-label="font 2" href="fonts/GESSTwoMedium/GE SS Two Medium.woff2" as="font"
+    <link rel="preload" as="font" aria-label="font 1" href="fonts/ITCAvantGardeStd-Demi.woff2?display=swap"
+        type="font/woff2" crossorigin>
+
+    <link rel="preload" as="font" aria-label="font 2" href="fonts/GESSTwoMedium/GE SS Two Medium.woff2?display=swap"
         type="font/woff2" crossorigin>
 
 
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700%2C400" rel="stylesheet" aria-label="font 3"
-        property="stylesheet" type="text/css" media="all">
-    <link rel='stylesheet' aria-label="font 4"
-        href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3'
+    <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Playfair+Display:700%2C400&display=swap"
+        rel="stylesheet" aria-label="font 3" property="stylesheet" type="text/css" media="all">
+
+    <link rel="preload" as="font" rel='stylesheet' aria-label="font 4"
+        href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3&display=swap'
         type='text/css' media='all' />
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         aria-label="bootstrap" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -654,8 +657,8 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
                                                         style="border-width: 0px;z-index: 999 ;position: relative ;">
-                                                        <img src="img/8-01.webp" width="1320" height="218" loading="lazy"
-                                                            alt="raffles University" />
+                                                        <img src="img/8-01.webp" width="1320" height="218"
+                                                            loading="lazy" alt="raffles University" />
                                                     </div>
                                                 </div>
                                             </div>
@@ -745,8 +748,9 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/course.webp" alt="course" style="width: 80%;" width="530" loading="lazy"
-                                                    height="635" class="vision-img aos-init aos-animate width1 scale1"
+                                                <img src="img/course.webp" alt="course" style="width: 80%;" width="530"
+                                                    loading="lazy" height="635"
+                                                    class="vision-img aos-init aos-animate width1 scale1"
                                                     data-aos="fade-right" data-aos-duration="800">
                                             </div>
                                         </div>
@@ -1015,7 +1019,8 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.webp" style="width: 100%;" alt="map" width="1520" height="900" loading="lazy">
+                        <img src="img/MAP-01.webp" style="width: 100%;" alt="map" width="1520" height="900"
+                            loading="lazy">
                     </div>
 
                 </div>
@@ -1172,25 +1177,25 @@
         AOS.init();
     </script>
 
-    <script  type='text/javascript' src='js/logos-slider.js'></script>
-    <script  type='text/javascript' src='js/jquery/jquery.js'></script>
-    <script  type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
-    <script  type='text/javascript' src='plugins/revslider/public/assets/js/jquery.themepunch.tools.min.js'></script>
-    <script  type='text/javascript'
+    <script type='text/javascript' src='js/logos-slider.js'></script>
+    <script type='text/javascript' src='js/jquery/jquery.js'></script>
+    <script type='text/javascript' src='js/jquery/jquery-migrate.min.js'></script>
+    <script type='text/javascript' src='plugins/revslider/public/assets/js/jquery.themepunch.tools.min.js'></script>
+    <script type='text/javascript'
         src='plugins/revslider/public/assets/js/jquery.themepunch.revolution.min.js'></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.slideanims.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.layeranimation.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.kenburn.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.navigation.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.parallax.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.actions.min.js"></script>
-    <script  type="text/javascript"
+    <script type="text/javascript"
         src="plugins/revslider/public/assets/js/extensions/revolution.extension.video.min.js"></script>
 
     <script type="text/javascript">
@@ -1295,7 +1300,7 @@
         } /*]]>*/
     </script>
 
-    <script  type='text/javascript' src='plugins/goodlayers-core/plugins/combine/script.js'></script>
+    <script type='text/javascript' src='plugins/goodlayers-core/plugins/combine/script.js'></script>
     <script type='text/javascript'>
         var gdlr_core_pbf = {
             "admin": "",
