--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
                                 style="font-size: 15px ;color: white ;margin-right: 8px ;"></i><a
-                                href="mailto:Info@raffles-me.com" aria-label="mail">Info@raffles-me.com</a> <i
-                                class="fa fa-phone"
+                                href="mailto:Info@raffles-me.com"
+                                aria-label="Info@raffles-me.com">Info@raffles-me.com</a> <i class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            <a href="tel:+966552995509" aria-label="phone">+966 55 299 5509</a>
+                            <a href="tel:+966552995509" aria-label="+966 55 299 5509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <div class="kingster-top-bar-right-social"></div>
@@ -183,7 +183,7 @@
                                             aria-label="Admission">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html"
-                                            aria-label="contact">Contact Us
+                                            aria-label="contact us">Contact Us
                                         </a></li>
 
                                 </ul>
@@ -365,7 +365,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="foundation-studies.html"
-                                                                    aria-label="see more">See More</a>
+                                                                    aria-label="See More Foundation Studies">See More
+                                                                    <span class="screen-reader-text">Foundation Studies</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -400,8 +402,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="visual-communication.html"
-                                                                    aria-label="see more">See
-                                                                    More</a>
+                                                                    aria-label="See More Visual Communication Design">See More
+                                                                    <span class="screen-reader-text">Visual Communication Design</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -437,8 +440,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="fashion-management-design.html"
-                                                                    aria-label="see more">See
-                                                                    More</a>
+                                                                    aria-label="See More Fashion Marketing & Management Design">See More
+                                                                    <span class="screen-reader-text">Fashion Marketing & Management Design</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -473,7 +477,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="interior-design.html"
-                                                                    aria-label="see more">See More</a>
+                                                                    aria-label="See More Interior Design">See More
+                                                                    <span class="screen-reader-text">Interior Design</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -508,7 +514,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="jewelery-design.html"
-                                                                    aria-label="see more">See More</a>
+                                                                    aria-label="See More Jewelry Design">See More
+                                                                    <span class="screen-reader-text">Jewelry Design</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -543,7 +551,9 @@
                                                             <div class="gdlr-core-column-service-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 15px ;font-weight: 200 ;font-style: normal ;">
                                                                 <a class="" href="fashion-design.html"
-                                                                    aria-label="see more">See More</a>
+                                                                    aria-label="See More Fashion Design">See More
+                                                                    <span class="screen-reader-text">Fashion Design</span>
+                                                                </a>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -640,8 +650,9 @@
                                                         id="gdlr-core-button-id-44682" data-aos="fade-right"
                                                         data-aos-duration="500" data-aos-delay="200"><span
                                                             class="gdlr-core-content" style="color: black ;">Read
-                                                            More</span><i
-                                                            class="gdlr-core-pos-right fa fa-long-arrow-right"
+                                                            More
+                                                            <span class="screen-reader-text">About us</span>
+                                                        </span><i class="gdlr-core-pos-right fa fa-long-arrow-right"
                                                             style="font-size: 18px ;color: black ;margin-top: 3px;"></i></a>
                                                 </div>
                                             </div>
@@ -844,7 +855,9 @@
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
                                                                 href="about-us.html" aria-label="learn more"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
-                                                                More</a>
+                                                                More
+                                                                <span class="screen-reader-text">A Vibrant Campus</span>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -880,7 +893,9 @@
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
                                                                 href="lifeinriyadh.html" aria-label="learn more"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
-                                                                More</a>
+                                                                More
+                                                                <span class="screen-reader-text">Life in Riyadh</span>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -915,7 +930,9 @@
                                                                 class="gdlr-core-column-service-read-more gdlr-core-info-font"
                                                                 href="scholarships.html" aria-label="learn more"
                                                                 style="font-style: normal ;margin-top: 0px ;color: white;">Learn
-                                                                More</a>
+                                                                More
+                                                                <span class="screen-reader-text">Scholarships</span>
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1071,9 +1088,9 @@
                                     <ul id="menu-our-campus"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="mailto:Info@raffles-me.com"
-                                                aria-label="info mail">Info@raffles-me.com</a></li>
+                                                aria-label="Info@raffles-me.com">Info@raffles-me.com</a></li>
                                         <li class="menu-item"><a href="mailto:Career@raffles-me.com"
-                                                aria-label="career mail">Career@raffles-me.com</a></li>
+                                                aria-label="Career@raffles-me.com">Career@raffles-me.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1085,9 +1102,11 @@
                                 <div class="menu-campus-life-container">
                                     <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a href="tel:+966550111719" aria-label="phone 1">+966 55
+                                        <li class="menu-item"><a href="tel:+966550111719"
+                                                aria-label="+966 55 011 1719">+966 55
                                                 011 1719</a></li>
-                                        <li class="menu-item"><a href="tel:+966552995509" aria-label="phone 2">+966 55
+                                        <li class="menu-item"><a href="tel:+966552995509"
+                                                aria-label="+966 55 299 5509">+966 55
                                                 299 5509</a></li>
 
                                     </ul>
@@ -1101,7 +1120,8 @@
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
-                                        <li class="menu-item"><a aria-label="address"
+                                        <li class="menu-item"><a
+                                                aria-label="Office No.25, Home Offices, Turki Bin Abdulaziz st 11454 Riyadh, Saudi Arabia"
                                                 href="https://www.google.com/maps/search/Office+No.25,+Home+Offices,+Turki+Bin+Abdulaziz+st+11454+Riyadh,+Saudi+Arabia/@24.7541798,46.6536575,12z/data=!3m1!4b1?entry=ttu">Office
                                                 No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
