--- a/programs.html
+++ b/programs.html
@@ -383,7 +383,7 @@
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
                                                     <a href="foundation-studies.html">
-                                                        <img src="img/Programs/Foundation-Studies.png" width="700"
+                                                        <img src="img/Programs/Foundation-Studies.webp" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
@@ -397,7 +397,7 @@
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
                                                     <a href="visual-communication.html">
-                                                        <img src="img/Programs/Visual-Communication.png" width="700"
+                                                        <img src="img/Programs/Visual-Communication.webp" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
