--- a/programs-ar.html
+++ b/programs-ar.html
@@ -181,7 +181,7 @@
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
                                                     <a href="foundation-studies-ar.html">
-                                                        <img src="img/Programs/Foundation-Studies.png" width="700"
+                                                        <img src="img/Programs/Foundation-Studies.webp" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
@@ -195,7 +195,7 @@
                                             <div class="gdlr-core-blog-modern-inner">
                                                 <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
                                                     <a href="visual-communication-ar.html">
-                                                        <img src="img/Programs/Visual-Communication.png" width="700"
+                                                        <img src="img/Programs/Visual-Communication.webp" width="700"
                                                             height="660" alt="" /></a>
                                                 </div>
                                             </div>
